package com.docly.app.ui.util

object DoclyTestTags {
    const val SCANNER_SCREEN = "scanner_screen"
    const val REVIEW_SCREEN = "review_screen"
    const val EDITOR_SCREEN = "editor_screen"
    const val METADATA_SCREEN = "metadata_screen"
    const val EXPORT_SCREEN = "export_screen"
    const val LIBRARY_SCREEN = "library_screen"
    const val READER_SCREEN = "reader_screen"
    const val CREATE_SCREEN = "create_screen"
    const val DOCUMENT_EDITOR_SCREEN = "document_editor_screen"
    const val CONVERTER_SCREEN = "converter_screen"
    const val SETTINGS_SCREEN = "settings_screen"

    const val NAVIGATE_BACK_ACTION = "navigate_back_action"
    const val OPEN_LIBRARY_ACTION = "open_library_action"
    const val CAMERA_PREVIEW = "camera_preview"
    const val DOCUMENT_BOUNDARY_OVERLAY = "document_boundary_overlay"
    const val CAMERA_PERMISSION_ACTION = "camera_permission_action"
    const val CAMERA_SETTINGS_ACTION = "camera_settings_action"
    const val CAMERA_CAPTURE_ACTION = "camera_capture_action"
    const val CAMERA_FLASH_TOGGLE = "camera_flash_toggle"
    const val SCANNER_AUTO_CAPTURE_TOGGLE = "scanner_auto_capture_toggle"
    const val SCANNER_QUALITY_HINT = "scanner_quality_hint"
    const val IMPORT_SINGLE_PHOTO_ACTION = "import_single_photo_action"
    const val IMPORT_MULTIPLE_PHOTOS_ACTION = "import_multiple_photos_action"
    const val RECOVERY_PROMPT = "recovery_prompt"
    const val RECOVERY_RESUME_ACTION = "recovery_resume_action"
    const val RECOVERY_DISCARD_ACTION = "recovery_discard_action"
    const val RECOVERY_DISCARD_DIALOG = "recovery_discard_dialog"
    const val RECOVERY_DISCARD_CONFIRM_ACTION = "recovery_discard_confirm_action"
    const val RECOVERY_DISCARD_DISMISS_ACTION = "recovery_discard_dismiss_action"
    const val SCAN_MODE_SELECTOR = "scan_mode_selector"
    const val SCAN_MODE_DOCUMENT_OPTION = "scan_mode_document_option"
    const val SCAN_MODE_MIXED_OPTION = "scan_mode_mixed_option"
    const val SCAN_MODE_COLOR_OPTION = "scan_mode_color_option"
    const val REVIEW_EDITOR_ACTION = "review_editor_action"
    const val EDITOR_METADATA_ACTION = "editor_metadata_action"
    const val EDITOR_CONTINUE_ACTION = EDITOR_METADATA_ACTION
    const val EDITOR_ADD_PAGE_ACTION = "editor_add_page_action"
    const val EDITOR_PAGE_LIST = "editor_page_list"
    const val EDITOR_MOVE_PAGE_UP_ACTION = "editor_move_page_up_action"
    const val EDITOR_MOVE_PAGE_DOWN_ACTION = "editor_move_page_down_action"
    const val EDITOR_ROTATE_PAGE_ACTION = "editor_rotate_page_action"
    const val EDITOR_DELETE_PAGE_ACTION = "editor_delete_page_action"
    const val EDITOR_DELETE_PAGE_DIALOG = "editor_delete_page_dialog"
    const val EDITOR_DELETE_PAGE_CONFIRM_ACTION = "editor_delete_page_confirm_action"
    const val EDITOR_DELETE_PAGE_DISMISS_ACTION = "editor_delete_page_dismiss_action"
    const val METADATA_EXPORT_ACTION = "metadata_export_action"
    const val METADATA_CONTINUE_ACTION = METADATA_EXPORT_ACTION
    const val METADATA_GRADE_FIELD = "metadata_grade_field"
    const val METADATA_SUBJECT_FIELD = "metadata_subject_field"
    const val METADATA_YEAR_FIELD = "metadata_year_field"
    const val METADATA_PAPER_TYPE_FIELD = "metadata_paper_type_field"
    const val METADATA_PAPER_NUMBER_FIELD = "metadata_paper_number_field"
    const val METADATA_SOURCE_FIELD = "metadata_source_field"
    const val METADATA_NOTES_FIELD = "metadata_notes_field"
    const val METADATA_FILENAME_PREVIEW = "metadata_filename_preview"
    const val METADATA_VALIDATION_ERRORS = "metadata_validation_errors"
    const val METADATA_ERROR_MESSAGE = "metadata_error_message"
    const val EXPORT_LIBRARY_ACTION = "export_library_action"
    const val EXPORT_PDF_ACTION = "export_pdf_action"
    const val EXPORT_OPEN_ACTION = "export_open_action"
    const val EXPORT_SHARE_ACTION = "export_share_action"
    const val EXPORT_SUMMARY = "export_summary"
    const val EXPORT_FILENAME = "export_filename"
    const val EXPORT_ERROR_MESSAGE = "export_error_message"
    const val LIBRARY_SCANNER_ACTION = "library_scanner_action"
    const val LIBRARY_IMPORT_ACTION = "library_import_action"
    const val LIBRARY_SEARCH_FIELD = "library_search_field"
    const val LIBRARY_CLEAR_SEARCH_ACTION = "library_clear_search_action"
    const val LIBRARY_DOCUMENT_LIST = "library_document_list"
    const val LIBRARY_DOCUMENT_ROW = "library_document_row"
    const val LIBRARY_OPEN_ACTION = "library_open_action"
    const val LIBRARY_EDIT_ACTION = "library_edit_action"
    const val LIBRARY_SHARE_ACTION = "library_share_action"
    const val LIBRARY_FAVORITE_ACTION = "library_favorite_action"
    const val LIBRARY_DELETE_ACTION = "library_delete_action"
    const val LIBRARY_DELETE_DIALOG = "library_delete_dialog"
    const val LIBRARY_DELETE_CONFIRM_ACTION = "library_delete_confirm_action"
    const val LIBRARY_DELETE_DISMISS_ACTION = "library_delete_dismiss_action"
    const val REVIEW_PAGE_THUMBNAIL = "review_page_thumbnail"
    const val REVIEW_CROP_OVERLAY = "review_crop_overlay"
    const val REVIEW_CROP_TOP_LEFT_HANDLE = "review_crop_top_left_handle"
    const val REVIEW_CROP_TOP_RIGHT_HANDLE = "review_crop_top_right_handle"
    const val REVIEW_CROP_BOTTOM_RIGHT_HANDLE = "review_crop_bottom_right_handle"
    const val REVIEW_CROP_BOTTOM_LEFT_HANDLE = "review_crop_bottom_left_handle"
    const val REVIEW_RESET_DETECTED_ACTION = "review_reset_detected_action"
    const val REVIEW_RESET_FULL_IMAGE_ACTION = "review_reset_full_image_action"
    const val REVIEW_APPLY_CROP_ACTION = "review_apply_crop_action"
    const val REVIEW_TOGGLE_ORIGINAL_ACTION = "review_toggle_original_action"
    const val REVIEW_TOGGLE_CROP_ACTION = "review_toggle_crop_action"
    const val REVIEW_ROTATE_ACTION = "review_rotate_action"
    const val REVIEW_ACCEPT_ACTION = "review_accept_action"
    const val REVIEW_RESCAN_ACTION = "review_rescan_action"
    const val REVIEW_RESCAN_DIALOG = "review_rescan_dialog"
    const val REVIEW_RESCAN_CONFIRM_ACTION = "review_rescan_confirm_action"
    const val REVIEW_RESCAN_DISMISS_ACTION = "review_rescan_dismiss_action"
    const val REVIEW_QUALITY_WARNING = "review_quality_warning"
    const val REVIEW_QUALITY_CONTINUE_ACTION = "review_quality_continue_action"
    const val REVIEW_QUALITY_RESCAN_ACTION = "review_quality_rescan_action"
    const val EDITOR_PAGE_THUMBNAIL = "editor_page_thumbnail"
    const val LIBRARY_DOCUMENT_THUMBNAIL = "library_document_thumbnail"
    const val READER_PDF_PAGE = "reader_pdf_page"
    const val READER_PDF_PREVIOUS_ACTION = "reader_pdf_previous_action"
    const val READER_PDF_NEXT_ACTION = "reader_pdf_next_action"
    const val READER_PDF_ZOOM_IN_ACTION = "reader_pdf_zoom_in_action"
    const val READER_PDF_ZOOM_OUT_ACTION = "reader_pdf_zoom_out_action"
    const val READER_TEXT_CONTENT = "reader_text_content"
    const val READER_TEXT_SIZE_INCREASE_ACTION = "reader_text_size_increase_action"
    const val READER_TEXT_SIZE_DECREASE_ACTION = "reader_text_size_decrease_action"
    const val READER_THEME_TOGGLE_ACTION = "reader_theme_toggle_action"
    const val READER_WEB_CONTENT = "reader_web_content"
    const val READER_SIMPLIFIED_BANNER = "reader_simplified_banner"
    const val READER_DOCX_CONTENT = "reader_docx_content"
    const val READER_XLSX_SHEET_TABS = "reader_xlsx_sheet_tabs"
    const val READER_XLSX_TABLE = "reader_xlsx_table"
    const val READER_LOAD_MORE_ACTION = "reader_load_more_action"
    const val CREATE_TITLE_FIELD = "create_title_field"
    const val CREATE_TYPE_TXT_OPTION = "create_type_txt_option"
    const val CREATE_TYPE_MARKDOWN_OPTION = "create_type_markdown_option"
    const val CREATE_TYPE_HTML_OPTION = "create_type_html_option"
    const val CREATE_DOCUMENT_ACTION = "create_document_action"
    const val CREATE_SCAN_PDF_ACTION = "create_scan_pdf_action"
    const val DOCUMENT_EDITOR_CONTENT_FIELD = "document_editor_content_field"
    const val DOCUMENT_EDITOR_SAVE_ACTION = "document_editor_save_action"
    const val DOCUMENT_EDITOR_EXPORT_PDF_ACTION = "document_editor_export_pdf_action"
    const val DOCUMENT_EDITOR_SOURCE_MODE_ACTION = "document_editor_source_mode_action"
    const val DOCUMENT_EDITOR_PREVIEW_MODE_ACTION = "document_editor_preview_mode_action"
    const val DOCUMENT_EDITOR_PREVIEW_WEB_CONTENT = "document_editor_preview_web_content"
    const val DOCUMENT_EDITOR_SEARCH_FIELD = "document_editor_search_field"
    const val DOCUMENT_EDITOR_SEARCH_PREVIOUS_ACTION = "document_editor_search_previous_action"
    const val DOCUMENT_EDITOR_SEARCH_NEXT_ACTION = "document_editor_search_next_action"
    const val DOCUMENT_EDITOR_SEARCH_SUMMARY = "document_editor_search_summary"
    const val DOCUMENT_EDITOR_UNSAVED_DIALOG = "document_editor_unsaved_dialog"
    const val DOCUMENT_EDITOR_DISCARD_CHANGES_ACTION = "document_editor_discard_changes_action"
    const val DOCUMENT_EDITOR_KEEP_EDITING_ACTION = "document_editor_keep_editing_action"
    const val PDF_PAGE_EDITOR_SCREEN = "pdf_page_editor_screen"
    const val PDF_PAGE_EDITOR_PAGE_LIST = "pdf_page_editor_page_list"
    const val PDF_PAGE_EDITOR_SAVE_ACTION = "pdf_page_editor_save_action"
    const val PDF_PAGE_EDITOR_MOVE_PAGE_UP_ACTION = "pdf_page_editor_move_page_up_action"
    const val PDF_PAGE_EDITOR_MOVE_PAGE_DOWN_ACTION = "pdf_page_editor_move_page_down_action"
    const val PDF_PAGE_EDITOR_ROTATE_PAGE_ACTION = "pdf_page_editor_rotate_page_action"
    const val PDF_PAGE_EDITOR_DELETE_PAGE_ACTION = "pdf_page_editor_delete_page_action"
    const val PDF_PAGE_EDITOR_DELETE_PAGE_DIALOG = "pdf_page_editor_delete_page_dialog"
    const val PDF_PAGE_EDITOR_DELETE_PAGE_CONFIRM_ACTION = "pdf_page_editor_delete_page_confirm_action"
    const val PDF_PAGE_EDITOR_DELETE_PAGE_DISMISS_ACTION = "pdf_page_editor_delete_page_dismiss_action"
    const val CONVERTER_INPUT_LIST = "converter_input_list"
    const val CONVERTER_INPUT_OPTION = "converter_input_option"
    const val CONVERTER_OUTPUT_OPTION = "converter_output_option"
    const val CONVERTER_OUTPUT_NAME_FIELD = "converter_output_name_field"
    const val CONVERTER_SHEET_OPTION = "converter_sheet_option"
    const val CONVERTER_ACTION = "converter_action"
    const val CONVERTER_PROGRESS = "converter_progress"
    const val CONVERTER_OPEN_ACTION = "converter_open_action"
    const val CONVERTER_SHARE_ACTION = "converter_share_action"
    const val CONVERTER_LIBRARY_ACTION = "converter_library_action"
    const val CONVERTER_ERROR_MESSAGE = "converter_error_message"
    const val SETTINGS_APPEARANCE_SECTION = "settings_appearance_section"
    const val SETTINGS_SCANNER_SECTION = "settings_scanner_section"
    const val SETTINGS_READER_SECTION = "settings_reader_section"
    const val SETTINGS_EXPORT_SECTION = "settings_export_section"
    const val SETTINGS_STORAGE_SECTION = "settings_storage_section"
    const val SETTINGS_THEME_SYSTEM_ACTION = "settings_theme_system_action"
    const val SETTINGS_THEME_LIGHT_ACTION = "settings_theme_light_action"
    const val SETTINGS_THEME_DARK_ACTION = "settings_theme_dark_action"
    const val SETTINGS_DYNAMIC_COLOR_TOGGLE = "settings_dynamic_color_toggle"
    const val SETTINGS_SCAN_MODE_DOCUMENT_ACTION = "settings_scan_mode_document_action"
    const val SETTINGS_SCAN_MODE_MIXED_ACTION = "settings_scan_mode_mixed_action"
    const val SETTINGS_SCAN_MODE_COLOR_ACTION = "settings_scan_mode_color_action"
    const val SETTINGS_AUTO_CAPTURE_TOGGLE = "settings_auto_capture_toggle"
    const val SETTINGS_READER_TEXT_SIZE_DECREASE_ACTION = "settings_reader_text_size_decrease_action"
    const val SETTINGS_READER_TEXT_SIZE_INCREASE_ACTION = "settings_reader_text_size_increase_action"
    const val SETTINGS_READER_THEME_LIGHT_ACTION = "settings_reader_theme_light_action"
    const val SETTINGS_READER_THEME_DARK_ACTION = "settings_reader_theme_dark_action"
    const val SETTINGS_PDF_QUALITY_HIGH_ACTION = "settings_pdf_quality_high_action"
    const val SETTINGS_PDF_QUALITY_MEDIUM_ACTION = "settings_pdf_quality_medium_action"
    const val SETTINGS_REFRESH_STORAGE_ACTION = "settings_refresh_storage_action"
    const val SETTINGS_CLEAR_CACHE_ACTION = "settings_clear_cache_action"

    const val LOADING_CONTENT = "loading_content"
    const val ERROR_CONTENT = "error_content"
    const val EMPTY_CONTENT = "empty_content"
}
